# large_scale_cpp_process_and_architecture_vol_1

./: CMakeLists.txt  README.md  index.html  speaking_content.md  workshop_slides.md
appendix_design_rules/: README.md
ch0_motivation/: CMakeLists.txt  README.md
ch0_motivation/src/: hierarchical_reuse_demo.cpp  software_capital_demo.cpp
ch1_compilers_linkers_components/: CMakeLists.txt  README.md
ch1_compilers_linkers_components/src/: component_demo.cpp  include_guard_demo.cpp  include_guard_demo.h  linkage_demo.cpp  linkage_demo.h  linkage_demo_main.cpp  my_stack.cpp  my_stack.h  my_stack.t.cpp
ch2_packaging_design_rules/: CMakeLists.txt  README.md
ch2_packaging_design_rules/src/: design_rules_demo.cpp
ch2_packaging_design_rules/src/pkg/: pkg_date.cpp  pkg_date.h  pkg_date.t.cpp  pkg_dateutil.cpp  pkg_dateutil.h
ch3_physical_design_factoring/: CMakeLists.txt  README.md
ch3_physical_design_factoring/src/: levelization_demo.cpp
ch3_physical_design_factoring/src/insulation/: insulation_demo.cpp
ch3_physical_design_factoring/src/insulation/compile_time_coupling/: heavy_widget.cpp  heavy_widget.h
ch3_physical_design_factoring/src/insulation/pimpl_insulation/: insulated_widget.cpp  insulated_widget.h
ch3_physical_design_factoring/src/levelization/callbacks/: callbacks_demo.cpp  event_queue.cpp  event_queue.h  logger.cpp  logger.h
ch3_physical_design_factoring/src/levelization/demotion/: demotion_demo.cpp
ch3_physical_design_factoring/src/levelization/dumb_data/: dumb_data_demo.cpp  graph.cpp  graph.h  node.cpp  node.h
ch3_physical_design_factoring/src/levelization/opaque_pointer/: device.cpp  device.h  opaque_pointer_demo.cpp
ch3_physical_design_factoring/src/levelization/protocol_class/: data_store.cpp  data_store.h  file_persistence.cpp  file_persistence.h  memory_persistence.cpp  memory_persistence.h  persistence_adapter.h  protocol_demo.cpp
